# mlbstats-rs

./: Cargo.toml  README.md
mlbstats/: Cargo.toml
mlbstats-cli/: Cargo.toml
mlbstats-cli/src/: commands.rs  error.rs  games.rs  league_leaders.rs  lib.rs  main.rs  standings.rs
mlbstats/examples/: todays_games.rs
mlbstats/src/: client.rs  division.rs  error.rs  games.rs  league.rs  lib.rs  linescore.rs  params.rs  players.rs  plays.rs  schedule.rs  standings.rs  teams.rs  types.rs
mlbstats/src/stats/: mod.rs  stats_leaders.rs  types.rs
