[package]
name = "mlbstats-cli"
version = "0.1.0"
edition = "2021"
authors = ["Carson Anderson <rcanderson23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
mlbstats = { path = "../mlbstats", features = ["team_funcs"]}
chrono = "0.4.19"
tabled = "0.6.0"
clap = { version = "3.1.8", features = ["derive"] }
thiserror = "1.0.30"


[[bin]]
name = "mlb"
path = "src/main.rs"
