[package]
name = "mlbstats-cli"
version = "0.1.0"
edition = "2021"
authors = ["Carson Anderson <rcanderson23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.11.26", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
mlbstats = { path = "../mlbstats", features = ["team_funcs"]}
chrono = "0.4.35"
tabled = "0.15.0"
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"


[[bin]]
name = "mlb"
path = "src/main.rs"
