[package]
name = "mlbstats-cli"
version = "0.1.0"
edition = "2021"
authors = ["Carson Anderson <rcanderson23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
mlbstats = { path = "../mlbstats", features = ["team_funcs"]}
chrono = "0.4.41"
tabled = "0.20.0"
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"


[[bin]]
name = "mlb"
path = "src/main.rs"
