[package]
name = "mlbstats"
version = "0.1.0"
edition = "2021"
authors = ["Carson Anderson <rcanderson23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
team_funcs = []

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.35"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_qs = "0.15.0"
serde_url_params = "0.2.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }

[lib]
name = "mlbstats"
path = "src/lib.rs"

[dev-dependencies]
serde_urlencoded = "0.7.1"
serde_test = "1.0.177"
